# super-simple-number-predictor

./: .editorconfig  .gitignore  Dockerfile  README.md  predict-test.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check.yml
app/: main.py  predict.py
client/: package-lock.json  package.json  pages.ts  setting.ts  tsconfig.json
client/components/: DrawPredict.tsx  Layout.tsx  Menu.tsx
client/pages/: _app.js  _app.tsx  about.tsx  index.tsx  model-1.tsx  model-2.tsx  model-3.tsx  numeric-judger.tsx
client/styles/: draw_predict.scss  menu.scss  numeric-judger.scss  styles.scss
models/: model-2.h5  model-3.h5  model1.h5
super_simple_number_predictor/: main.py
