[tool.poetry]
name = "super-simple-number-predictor"
version = "0.1.0"
description = ""
authors = ["osawa-koki <github@osawa.dev>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.96.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
