[tool.poetry]
name = "super-simple-number-predictor"
version = "0.1.0"
description = ""
authors = ["osawa-koki <github@osawa.dev>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.11.x"
fastapi = "^0.96.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
python-multipart = "^0.0.6"
tensorflow = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
